--- a/Fase1/My Project/Resources.resx
+++ b/Fase1/My Project/Resources.resx
@@ -172,4 +172,28 @@
   <data name="imagenes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imagenes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="auto_antiguo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\auto_antiguo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="auto_policia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\auto_policia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="camion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="camion_bomberos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camion_bomberos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="camion_carga" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camion_carga.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="deportivo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\deportivo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="helicoptero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\helicoptero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="remolque" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\remolque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
